--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
+libdevice-currentcost-perl (1.110390-1) unstable; urgency=low
+
+  * Fix tests on non-linux platforms.
+
+ -- Mark Hindess <soft-debian@temporalanomaly.com>  Tue,  8 Feb 2011 22:59:18 +0000
+
 libdevice-currentcost-perl (1.110370-1) unstable; urgency=low
 
   * Initial release.
 
- -- Mark Hindess <soft-debian@temporalanomaly.com>  Sun,  6 Feb 2011 20:20:43 +0000
+ -- Mark Hindess <soft-debian@temporalanomaly.com>  Sun,  6 Feb 2011 20:35:11 +0000
 
