--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+libdevice-currentcost-perl (1.110790-1) unstable; urgency=low
+
+  * Add history API.
+
+ -- Mark Hindess <soft-debian@temporalanomaly.com>  Sun, 20 Mar 2011 09:20:39 +0000
+
 libdevice-currentcost-perl (1.110390-1) unstable; urgency=low
 
   * Fix tests on non-linux platforms.
 
- -- Mark Hindess <soft-debian@temporalanomaly.com>  Tue,  8 Feb 2011 22:59:18 +0000
+ -- Mark Hindess <soft-debian@temporalanomaly.com>  Tue,  8 Feb 2011 22:59:34 +0000
 
 libdevice-currentcost-perl (1.110370-1) unstable; urgency=low
 
