--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+libdevice-currentcost-perl (1.110791-1) unstable; urgency=low
+
+  * Minor regexp improvement.
+
+ -- Mark Hindess <soft-debian@temporalanomaly.com>  Sun, 20 Mar 2011 13:10:00 +0000
+
 libdevice-currentcost-perl (1.110790-1) unstable; urgency=low
 
   * Add history API.
 
- -- Mark Hindess <soft-debian@temporalanomaly.com>  Sun, 20 Mar 2011 09:20:39 +0000
+ -- Mark Hindess <soft-debian@temporalanomaly.com>  Sun, 20 Mar 2011 09:19:26 +0000
 
 libdevice-currentcost-perl (1.110390-1) unstable; urgency=low
 
