--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,16 @@
+libdevice-currentcost-perl (1.112970-1) unstable; urgency=low
+
+  * Trivial Pod fix.
+  * Make test more robust.
+
+ -- Mark Hindess <soft-debian@temporalanomaly.com>  Mon, 24 Oct 2011 22:15:28 +0100
+
 libdevice-currentcost-perl (1.110792-1) unstable; urgency=low
 
   * Make reader parser more liberal so it accepts more types of
     input.
 
- -- Mark Hindess <soft-debian@temporalanomaly.com>  Sun, 20 Mar 2011 21:10:57 +0000
+ -- Mark Hindess <soft-debian@temporalanomaly.com>  Sun, 20 Mar 2011 21:17:26 +0000
 
 libdevice-currentcost-perl (1.110791-1) unstable; urgency=low
 
